--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Polymer-PointerEvents",
+  "name": "polymer-pointerevents",
   "description": "Polyfill of the PointerEvents w3c spec",
   "version": "0.2.4",
   "main": "Gruntfile.js",
